
[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "imputation-agent"
version = "0.3.0"
description = "End-to-end imputation pipeline with evaluation, taxonomy, and LLM JSON reports (OpenAI/Ollama)"
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
imputation_agent = ["*.md"]
